--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <html>
-<form>
-<input type = "radio" value = "LKG">LKG
-<input type = "radio" value = "I">I
-</form>
+ <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@1,700&display=swap" rel="stylesheet">
+<style>
+h1 {
+font-family: "Source sans pro";
+}
+</style>
+<body>
+<h1>SHIVANSH KUMAR </h1>
+<h2>About</h2>
+<p>Developing</p>
+</body>
 </html>
+
